--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.weatherBlanket</string>
+	<string>no.rmax.weatherblanket.app</string>
 	<key>PROJECT_ID</key>
 	<string>weather-blanket</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:88468625362:ios:a308427904ac9ba173da0b</string>
+	<string>1:88468625362:ios:76233ab271396f0273da0b</string>
 </dict>
 </plist>
