--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.2.1+1
+version: 2.1.1+1
 ios_bundle_id: no.rmax.weatherblanket.app
 
 environment:
@@ -36,9 +36,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.8.0
-  cloud_functions: ^5.1.5
+  cloud_functions: ^5.3.2
   cloud_firestore: ^5.5.0
   flutter_launcher_icons: ^0.14.1
+  firebase_auth: ^5.4.2
+  google_sign_in: ^6.2.2
+  http: ^1.3.0
+  flutter_dotenv: ^5.2.1
+  flutter_localizations:
+    sdk: flutter
+  flutter_colorpicker: ^1.1.0
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
