--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -16,11 +16,11 @@ flutter_launcher_icons:
   # image_path_ios_tinted_grayscale: "assets/icon/icon_tinted.png"
   # desaturate_tinted_to_grayscale_ios: true
 
-  # web:
-  #   generate: true
-  #   image_path: "path/to/image.png"
-  #   background_color: "#hexcode"
-  #   theme_color: "#hexcode"
+  web:
+    generate: true
+    image_path: "assets/favicon.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
 
   # windows:
   #   generate: true
