--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.1.1+1
+version: 2.1.2+1
 ios_bundle_id: no.rmax.weatherblanket.app
 
 environment:
@@ -47,6 +47,7 @@ dependencies:
     sdk: flutter
   flutter_colorpicker: ^1.1.0
   flutter_riverpod: ^2.6.1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
