remove unused firebase apps

--- a/firebase.json
+++ b/firebase.json
@@ -1,61 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "ios": {
-        "default": {
-          "projectId": "weather-blanket",
-          "appId": "1:88468625362:ios:76233ab271396f0273da0b",
-          "uploadDebugSymbols": false,
-          "fileOutput": "ios/Runner/GoogleService-Info.plist"
-        }
-      },
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "weather-blanket",
-          "configurations": {
-            "android": "1:88468625362:android:8572d594c521a21a73da0b",
-            "ios": "1:88468625362:ios:76233ab271396f0273da0b",
-            "macos": "1:88468625362:ios:ddf9c8dfa9664b5a73da0b",
-            "web": "1:88468625362:web:9c56088542cb9e7173da0b",
-            "windows": "1:88468625362:web:6d0c04c3e9413da973da0b"
-          }
-        }
-      },
-      "android": {
-        "default": {
-          "projectId": "weather-blanket",
-          "appId": "1:88468625362:android:8572d594c521a21a73da0b",
-          "fileOutput": "android/app/google-services.json"
-        }
-      },
-      "macos": {
-        "default": {
-          "projectId": "weather-blanket",
-          "appId": "1:88468625362:ios:ddf9c8dfa9664b5a73da0b",
-          "uploadDebugSymbols": false,
-          "fileOutput": "macos/Runner/GoogleService-Info.plist"
-        }
-      }
-    }
-  },
-  "functions": [
-    {
-      "source": "functions",
-      "codebase": "default",
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log",
-        "*.local"
-      ],
-      "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run build"]
-    }
-  ],
-  "hosting": {
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "predeploy": ["flutter build web --dart-define=envFileName=dotenv"],
-    "frameworksBackend": { "region": "europe-west1" },
-    "public": "build/web"
-  }
-}
+{"flutter":{"platforms":{"ios":{"default":{"projectId":"weather-blanket","appId":"1:88468625362:ios:59eacb4a95c0b27673da0b","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"weather-blanket","configurations":{"ios":"1:88468625362:ios:59eacb4a95c0b27673da0b","web":"1:88468625362:web:8975cd9c51631ef973da0b"}}}}}}
