remove .firebase from git

--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,33 @@
-{"flutter":{"platforms":{"ios":{"default":{"projectId":"weather-blanket","appId":"1:88468625362:ios:59eacb4a95c0b27673da0b","uploadDebugSymbols":false,"fileOutput":"ios/Runner/GoogleService-Info.plist"}},"dart":{"lib/firebase_options.dart":{"projectId":"weather-blanket","configurations":{"ios":"1:88468625362:ios:59eacb4a95c0b27673da0b","web":"1:88468625362:web:8975cd9c51631ef973da0b"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "ios": {
+        "default": {
+          "projectId": "weather-blanket",
+          "appId": "1:88468625362:ios:59eacb4a95c0b27673da0b",
+          "uploadDebugSymbols": false,
+          "fileOutput": "ios/Runner/GoogleService-Info.plist"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "weather-blanket",
+          "configurations": {
+            "ios": "1:88468625362:ios:59eacb4a95c0b27673da0b",
+            "web": "1:88468625362:web:8975cd9c51631ef973da0b"
+          }
+        }
+      }
+    }
+  },
+"hosting": {
+    "public": "build/web",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
