--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_colorpicker: ^1.1.0
   flutter_riverpod: ^2.6.1
   uuid: ^4.5.1
+  firebase_ui_auth: ^1.16.1
+  firebase_ui_oauth_google: ^1.4.1
 
 dev_dependencies:
   flutter_test:
