--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_web_plugins:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -50,6 +52,7 @@ dependencies:
   uuid: ^4.5.1
   firebase_ui_auth: ^1.16.1
   firebase_ui_oauth_google: ^1.4.1
+  go_router: ^15.1.3
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +78,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/WeatherBlanketLogo.png
+    - assets/WeatherBlanketLogoRounded.png
 
   fonts:
   - family: SocialIcons
