--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: weather_blanket
+name: tempestry
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -16,8 +16,8 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 2.5.2+1
-ios_bundle_id: no.rmax.weatherblanket.app
+version: 3.1.1+1
+ios_bundle_id: app.tempestry
 
 environment:
   sdk: ^3.5.1
@@ -77,8 +77,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/WeatherBlanketLogo.png
-    - assets/WeatherBlanketLogoRounded.png
+    - assets/TempestryLogo.png
+    - assets/TempestryLogoRounded.png
 
   fonts:
   - family: SocialIcons
