--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 3.1.1+1
+version: 3.2.1+1
 ios_bundle_id: app.tempestry
 
 environment:
@@ -37,22 +37,22 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  firebase_core: ^3.8.0
-  cloud_functions: ^5.3.2
-  cloud_firestore: ^5.5.0
+  firebase_core: ^4.0.0
+  cloud_functions: ^6.0.0
+  cloud_firestore: ^6.0.0
   flutter_launcher_icons: ^0.14.1
-  firebase_auth: ^5.4.2
-  google_sign_in: ^6.2.2
+  firebase_auth: ^6.0.1
   http: ^1.3.0
-  flutter_dotenv: ^5.2.1
+  flutter_dotenv: ^6.0.0
   flutter_localizations:
     sdk: flutter
   flutter_colorpicker: ^1.1.0
   flutter_riverpod: ^2.6.1
   uuid: ^4.5.1
-  firebase_ui_auth: ^1.16.1
-  firebase_ui_oauth_google: ^1.4.1
-  go_router: ^15.1.3
+  firebase_ui_auth: ^3.0.0
+  firebase_ui_oauth_google: ^2.0.0
+  go_router: ^16.2.1
+  flutter_multi_slider: ^2.0.1
 
 dev_dependencies:
   flutter_test:
@@ -63,7 +63,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -81,9 +81,9 @@ flutter:
     - assets/TempestryLogoRounded.png
 
   fonts:
-  - family: SocialIcons
-    fonts:
-      - asset: packages/firebase_ui_auth/fonts/SocialIcons.ttf
+    - family: SocialIcons
+      fonts:
+        - asset: packages/firebase_ui_auth/fonts/SocialIcons.ttf
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -110,4 +110,3 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
-
